frontend/tests/errors/ER-001/malformed_function/test.vx
// @rfc: docs/vexel-rfc.md#errors--diagnostics
// @desc: Syntax errors are reported as compile-time errors | Syntax error: malformed function signature


&^main( -> #i32 {
    0
}
